--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/emanuele-falzone/prenotaci#readme",
   "dependencies": {
     "axios": "^0.20.0",
+    "debug": "^4.3.1",
     "node-telegram-bot-api": "^0.51.0",
     "nodemailer": "^6.5.0",
     "qs": "^6.9.4",
